--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+body{
+  font-family: 'Ubuntu', sans-serif;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,11 +30,4 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
